# src/server/Generated/lib/Model/SongUpdateRequest.php
@@ -350,6 +350,9 @@ class SongUpdateRequest implements ModelInterface, ArrayAccess, \JsonSerializabl
             $invalidProperties[] = "invalid value for 'order_no', must be bigger than or equal to 1.";
         }
 
+        if ($this->container['is_display'] === null) {
+            $invalidProperties[] = "'is_display' can't be null";
+        }
         if ($this->container['lyricists'] === null) {
             $invalidProperties[] = "'lyricists' can't be null";
         }
@@ -522,7 +525,7 @@ class SongUpdateRequest implements ModelInterface, ArrayAccess, \JsonSerializabl
     /**
      * Gets is_display
      *
-     * @return bool|null
+     * @return bool
      */
     public function getIsDisplay()
     {
@@ -532,7 +535,7 @@ class SongUpdateRequest implements ModelInterface, ArrayAccess, \JsonSerializabl
     /**
      * Sets is_display
      *
-     * @param bool|null $is_display 公開状態（true: 表示する）
+     * @param bool $is_display 公開状態（true: 表示する）
      *
      * @return self
      */
